fix: round answers w/ long deci, no dis overflow
Answers with round decimals are rounded to the forth decimal place so
that display doesn't overflow.

--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ section.calculator button {
 }
 
 section.calculator button.btn-equals {
-	position: relative;
+	height: 5rem;
 }
 
 section.calculator section.numpad-row {
